<resources>
    <string name="app_name">Palindrome App</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="no_users_found">No users found</string>
    <string name="is_palindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="profile_icon">Profile Icon</string>
</resources>